--- a/index.html
+++ b/index.html
@@ -4,8 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment-1</title>
+    <style>
+         @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+    </style>
+    <link rel="stylesheet" href="Style/style.css">
 </head>
-<body>
+<body class="open-sans-normal">
+    <header class="header">
+        <nav>
+            <h1 class="nav-tittle">Bangladesh 2.0</h1>
+             <li><a href=""><button class="btn-primary">Sign In</button></a></li>
+        </nav>
+        <div class="header-part">
+            <div class="header-tittle">
+                <p class="header-sub-tittle">Bangladesh 2.0</p>
+                <h1 class="header-tittle">Idea , Innovation ,
+                    Vision and Challenges In New Bangladesh.</h1>
+                <li><a href=""><button class="btn-primary">Explore New Bangladesh</button></a></li>
+            </div>
+            <div class="header-img"><img src="assets/hero.png" alt=""></div>
+        </div>
+    </header>
     
+    <main>
+      
+    </main>
+
+
+    <footer>
+
+    </footer>
 </body>
 </html>
