Subscibe part done

--- a/index.html
+++ b/index.html
@@ -135,14 +135,23 @@
             <button class="donate-btn">500 Taka</button>
             <button class="donate-btn">1000 Taka</button>
         </div>
-        <input type="text">
+        <span class="input-text">
+            <input  placeholder="Other Amount (Taka)" type="text" s>
+        </span>
         <button class="dn-btn">Done Now</button>
       </section>
     </main>
 
-
     <footer>
-
+        <section class="Subscribe-part">
+            <h1 class="sub-tittle">Subscribe Newsletter</h1>
+            <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth.</p>
+            <form>
+                <input type="text" placeholder="Enter your email here">
+                <input type="submit" value="Subscribe">
+            </form>
+            <p>We promise not to spam you!</p>
+        </section>
     </footer>
 </body>
 </html>
