--- a/index.html
+++ b/index.html
@@ -147,11 +147,24 @@
             <h1 class="sub-tittle">Subscribe Newsletter</h1>
             <p>Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth.</p>
             <form>
-                <input type="text" placeholder="Enter your email here">
-                <input type="submit" value="Subscribe">
+                <input class="input" type="email" placeholder="Enter your email here">
+                <input class="submit" type="submit" value="Subscribe">
             </form>
             <p>We promise not to spam you!</p>
         </section>
+        <section class="foot">
+             <div>
+            <h3 class="Bd">Bangladesh 2.0</h3>
+           
+        </div>
+        <div class="foot-img">
+            <hr>
+            <img class="fb-img" src="assets/facebook.png" alt="">
+            <img class="fb-img" src="assets/instagram.png" alt="">
+            <img class="fb-img" src="assets/x.png" alt="">
+        </div>
+        </section>
+       
     </footer>
 </body>
 </html>
